Closed
Bug 929890
Opened 12 years ago
Closed 1 year ago
HTMLMediaElement.preload returns the empty string instead of e.g. "preload"
Categories
(Core :: DOM: Core & HTML, defect, P5)
Tracking
()
RESOLVED
FIXED
140 Branch
| Tracking | Status | |
|---|---|---|
| firefox140 | --- | fixed |
People
(Reporter: foolip, Assigned: keithamus)
References
Details
(Keywords: dev-doc-needed)
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/28.0.1500.71 Chrome/28.0.1500.71 Safari/537.36
Steps to reproduce:
http://software.hixie.ch/utilities/js/live-dom-viewer/saved/2581
Actual results:
Returns ""
Expected results:
Should return "preload", "auto" or "none", whichever is the default in Gecko.
| Reporter | ||
Comment 1•12 years ago
|
||
Ms2ger, you fixed bug 666666, so maybe you're interested in this.
| Reporter | ||
Comment 2•12 years ago
|
||
I should add that in <https://codereview.chromium.org/35803004/> I also tested Presto and IE11 and they return "preload", so that's probably what you want. I'm going to try aligning Blink with that in <https://code.google.com/p/chromium/issues/detail?id=310450> as well.
Updated•12 years ago
|
Keywords: dev-doc-needed
Comment 3•8 years ago
|
||
https://bugzilla.mozilla.org/show_bug.cgi?id=1472046
Move all DOM bugs that haven’t been updated in more than 3 years and has no one currently assigned to P5.
If you have questions, please contact :mdaly.
Priority: -- → P5
Updated•3 years ago
|
Severity: normal → S3
Updated•1 year ago
|
Assignee: nobody → mozilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 5•1 year ago
|
||
Pushed by mozilla@keithcirkel.co.uk:
https://hg.mozilla.org/integration/autoland/rev/8ea31bd81782
Canonicalise media preload attribute value of "" to "auto" r=smaug
Comment 7•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox140:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch
Updated•1 year ago
|
QA Whiteboard: [qa-triage-done-c141/b140]
You need to log in
before you can comment on or make changes to this bug.
Description
•