Bug 929890 - Canonicalise media preload attribute value of "" to "auto" r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D249523